2002-05-14  Jesper Skov  <jskov@redhat.com>

	* include/netinet6/in6.h: Fixed warnings.

2002-04-22  Gary Thomas  <gthomas@redhat.com>

	* src/sys/netinet6/nd6.c: Make debug (on) default.

	* include/netinet/tcp_debug.h: Fully conditionalize debug facility.

2002-04-17  Gary Thomas  <gthomas@redhat.com>

	* include/sys/socket.h: Remove definitions only used by sysctl
	since their presence could be misleading.

	* src/ecos/support.c (STACK_SIZE): Remove [debug/testing] bloat.

2002-03-30  Gary Thomas  <gthomas@redhat.com>

	* include/machine/types.h: [Placeholder] needed for some compilers.

2002-03-28  Gary Thomas  <gthomas@redhat.com>

	* src/sys/netinet/ip_icmp.c: 
	* include/sys/param.h: 
	* include/netinet/icmp_var.h: Export status structure for SNMP.

	* cdl/freebsd_net.cdl: Augment log facilities to what SNMP uses.

2002-03-27  Gary Thomas  <gthomas@redhat.com>

	* include/sys/param.h (log): Remove warning.

2002-03-25  Gary Thomas  <gthomas@redhat.com>

	* src/ecos/support.c (zinit): Add more record keeping (and debug
	prints) for zones.

	* src/ecos/timeout.c (do_timeout): Don't reset ACTIVE when running
	a timeout (since it confuses the TCP timer code).

2002-03-23  Gary Thomas  <gthomas@redhat.com>

	* src/sys/netinet/in_cksum.c (in_addword): Changed to use uint32 since
	uint64 was wasteful (and failed on some architectures!)

2002-03-20  Gary Thomas  <gthomas@redhat.com>

	* include/sys/socket.h: Force struct sockaddr to be at least as
	big as IPv4 or IPv6 sockets.  Possibly this could be a little
	cleaner, but at least now it's safe for programs to use sockaddr
	variables in either environment.

2002-03-11  Hugo Tyson  <hmt@redhat.com> 

	[Case 107110]

	* src/sys/netinet/in.c (in_control): SIOCSIFADDR switch entry
	moved to before the scan for this same address being in the list
	already, along with Add and Delete (SIOCAIFADDR,SIOCDIFADDR) arms.
	It falls through into the same alloc-if-needed code anyway.