@@ -1,3 +1,8 @@
+2002-06-05  Gary Thomas  <gary@chez-thomas.org>
+
+	* include/netinet/in.h: Rename 'ip_opts' field (using the same
+	name as the structure is illegal in C++).
+
 2002-05-14  Jesper Skov  <jskov@redhat.com>
 
 	* include/netinet6/in6.h: Fixed warnings.
